--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,20 @@
+#Kafka config
 zookeeper.host=localhost:2181
 zookeeper.groupId=kafkaConsumers
 kafka.bootstrap.server=localhost:9092
+#email config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yourSMTPmailAddress
+spring.mail.password=yynqarjhpaatinjx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=30000
+spring.mail.properties.mail.smtp.timeout=30000
+spring.mail.properties.mail.smtp.writetimeout=30000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+#email to be notified (Your own email address)
+app.email.address=example@mail.com
+#log config
+logging.file=/var/log/kafkaTest/kafka_test.log
