--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,15 @@ spring.mail.properties.mail.smtp.writetimeout=30000
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 #log config
 logging.file=/var/log/kafkaTest/kafka_test.log
+#DB config
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/kafka_test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
